--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -71,7 +71,7 @@
             </mat-form-field>
           </div>
           <div class="d-xl-flex gap-2 ">
-            @if(tipoInscripcionId != "1"){
+            @if(tipoInscripcionId != 1){
               <mat-form-field class=" w-100">
                 <mat-label>Establecimiento a Prestar Servicio</mat-label>
                 <mat-select formControlName="estabSolicitudId">
