--- a/src/app/pages/confirmacion/confirmacion.component.html
+++ b/src/app/pages/confirmacion/confirmacion.component.html
@@ -10,7 +10,7 @@
       </div>
       <h2 class="card-title text-success">¡Formulario enviado!</h2>
       <p class="card-text mt-3">Gracias por tu envío. Hemos recibido tu formulario correctamente.</p>
-      <a routerLink="/" class="btn btn-outline-success mt-4">Volver al inicio</a>
+      <a href="https://serviciopenitenciariodecordoba.com.ar/web/" class="btn btn-outline-success mt-4">Volver al inicio</a>
     </div>
   </div>
 </div>
