--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -3,8 +3,8 @@
 <h1 class="mb-2 text-center">Bienvenidos, {{ title }}</h1>
 <div class="container container-fluid d-lg-flex flex-row-reverse">
   <div class="right-side col-lg ">
-    <h3 class="fw-bold fs-3 text-dark mt-2 mb-5 text-center">Incluir Foto Carnet</h3>
-
+    <h3 class="fw-bold fs-3 text-dark mt-2 mb-2 text-center">Incluir Foto Carnet</h3>
+    <h5 class="text-center mb-5">(Fotografia 4x4, vestimenta civil sobrio, fondo liso)</h5>
     <input type="file" class="d-none" accept=".jpg,.jpeg,.png"
     (change)="onFileSelected($event)" #fileUpload>
 
